# openfly

./: .gitignore  AGENTS.MD  ASSUMPTIONS_AND_GAPS.md  GITHUB_UPLOAD_NOTES.md  PROGRESS_LOG.md  README.md  REPRO_PARITY_REPORT.md  TASKS.md  bottlenecks_and_stretch_goals.txt  context.md  openfly_whitepaper_journal_draft.md  pyproject.toml
benchmarks/: extract_demo_screenshots.py  profile_fullstack.py  run_body_benchmarks.py  run_brain_benchmarks.py  run_fullstack_with_realistic_vision.py  run_vision_benchmarks.py  summarize_demo_runs.py
configs/: brain_endogenous_public_parity.yaml  brain_endogenous_public_parity_routed_only.yaml  brain_spontaneous_probe.yaml  default.yaml  flygym_realistic_vision.yaml  flygym_realistic_vision_inferred_visual_p9.yaml  flygym_realistic_vision_inferred_visual_turn.yaml  flygym_realistic_vision_public_p9_context.yaml  flygym_realistic_vision_splice_axis1d.yaml  flygym_realistic_vision_splice_axis1d_descending_readout.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_no_target.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_stationary_left.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_stationary_right.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_target_left.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_target_right.yaml  flygym_realistic_vision_splice_axis1d_descending_readout_zero_brain.yaml  flygym_realistic_vision_splice_axis1d_expanded_readout.yaml  flygym_realistic_vision_splice_uvgrid_celltype_descending_readout.yaml  (+114 more)
docs/: architecture_scout.md  (+73 more)
(+696 files in other folders)
